--- a/src/views/index.erb
+++ b/src/views/index.erb
@@ -3,7 +3,8 @@
 <% end %>
 
 <div class="jumbotron">
-  <h1>Ruby SPARQLサンプル</h1>
+  <h1>第6回 LODチャレンジデー サーバサイドサンプル集</h1>
+  <p><a href="https://github.com/LinkedOpenData/challenge2013/wiki/%E3%82%B5%E3%83%BC%E3%83%90%E3%83%BC%E3%82%B5%E3%82%A4%E3%83%89">Wikiも参照</a></p>
 </div>
 
 <div class="row">
@@ -22,6 +23,15 @@
       <p>場所を入力してその位置を地図で表示</p>
       <p>データ・ソース例: DBpedia Japanese</p>
       <p><a class="btn btn-defualt" href="/map" role="button">詳細を見る</a><p>
+    </div>
+  </div>
+
+  <div class="panel panel-default">
+    <div class="panel-heading"><h2>円グラフ表示</h2></div>
+    <div class="panel-body">
+      <p>数を集計してグラフ表示</p>
+      <p>データ・ソース例: DBpedia Japanese</p>
+      <p><a class="btn btn-defualt" href="/piechart" role="button">詳細を見る</a><p>
     </div>
   </div>
 </div>
