--- a/src/views/index.erb
+++ b/src/views/index.erb
@@ -1,9 +1,9 @@
 <% content_for :header do %>
-  <title>Ruby SPARQLサンプル</title>
+  <title>サーバサイドサンプル集</title>
 <% end %>
 
 <div class="jumbotron">
-  <h1>第6回 LODチャレンジデー サーバサイドサンプル集</h1>
+  <h1>サーバサイドサンプル集</h1>
   <p><a href="https://github.com/LinkedOpenData/challenge2013/wiki/%E3%82%B5%E3%83%BC%E3%83%90%E3%83%BC%E3%82%B5%E3%82%A4%E3%83%89">Wikiも参照</a></p>
 </div>
 
