--- a/src/views/index.erb
+++ b/src/views/index.erb
@@ -3,35 +3,44 @@
 <% end %>
 
 <div class="jumbotron">
-  <h1>サーバサイドサンプル集</h1>
-  <p><a href="https://github.com/LinkedOpenData/challenge2013/wiki/%E3%82%B5%E3%83%BC%E3%83%90%E3%83%BC%E3%82%B5%E3%82%A4%E3%83%89">Wikiも参照</a></p>
+  <div class="container">
+    <h1>サーバサイドサンプル集</h1>
+    <p>第6回LODチャレンジデー サーバサイドコース用資料</p>
+    <p><a href="https://github.com/LinkedOpenData/challenge2013/wiki/%E3%82%B5%E3%83%BC%E3%83%90%E3%83%BC%E3%82%B5%E3%82%A4%E3%83%89">Wikiも参照</a></p>
+  </div>
 </div>
 
 <div class="row">
-  <div class="panel panel-default">
-    <div class="panel-heading"><h2>取得データ表示</h2></div>
-    <div class="panel-body">
-      <p>単語を入力してそのデータを取得・表示</p>
-      <p>データ・ソース例: DBpedia Japanese</p>
-      <p><a class="btn btn-defualt" href="/word" role="button">詳細を見る</a><p>
+  <div class="col-md-6">
+    <div class="panel panel-default">
+      <div class="panel-heading"><h2>取得データ表示</h2></div>
+      <div class="panel-body">
+        <p>単語を入力してそのデータを取得・表示</p>
+        <p>データ・ソース例: DBpedia Japanese</p>
+        <p><a class="btn btn-defualt" href="/word" role="button">詳細を見る</a><p>
+      </div>
     </div>
   </div>
 
-  <div class="panel panel-default">
-    <div class="panel-heading"><h2>地図表示</h2></div>
-    <div class="panel-body">
-      <p>場所を入力してその位置を地図で表示</p>
-      <p>データ・ソース例: DBpedia Japanese</p>
-      <p><a class="btn btn-defualt" href="/map" role="button">詳細を見る</a><p>
+  <div class="col-md-6">
+    <div class="panel panel-default">
+      <div class="panel-heading"><h2>地図表示</h2></div>
+      <div class="panel-body">
+        <p>場所を入力してその位置を地図で表示</p>
+        <p>データ・ソース例: DBpedia Japanese</p>
+        <p><a class="btn btn-defualt" href="/map" role="button">詳細を見る</a><p>
+      </div>
     </div>
   </div>
 
-  <div class="panel panel-default">
-    <div class="panel-heading"><h2>円グラフ表示</h2></div>
-    <div class="panel-body">
-      <p>数を集計してグラフ表示</p>
-      <p>データ・ソース例: DBpedia Japanese</p>
-      <p><a class="btn btn-defualt" href="/piechart" role="button">詳細を見る</a><p>
+  <div class="col-md-6">
+    <div class="panel panel-default">
+      <div class="panel-heading"><h2>円グラフ表示</h2></div>
+      <div class="panel-body">
+        <p>数を集計してグラフ表示</p>
+        <p>データ・ソース例: DBpedia Japanese</p>
+        <p><a class="btn btn-defualt" href="/piechart" role="button">詳細を見る</a><p>
+      </div>
     </div>
   </div>
 </div>
