--- a/src/views/layout.erb
+++ b/src/views/layout.erb
@@ -9,9 +9,31 @@
     <![endif]-->
     <script src="/js/jquery-1.10.2.min.js"></script>
     <script src="/js/bootstrap.min.js" type="text/javascript"></script>
+    <style type="text/css">
+      body { margin-top: 50px; }
+    </style>
     <%= yield_content :header %>
   </head>
   <body>
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle Navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">サーバサイドサンプル集</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="/">Top</a></li>
+            <!--%= yield_content :nav %-->
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
     <div class="container">
       <%= yield :index %>
     </div>
