--- a/src/views/word.erb
+++ b/src/views/word.erb
@@ -16,7 +16,7 @@
   <thead>
     <tr><th>p</th><th>o</th></tr>
   </thead>
-  <thead>
+  <tbody>
 <% @results.each do |solution| %>
     <tr><td><%= solution[:p] %></td><td><%= solution[:o] %></td></tr>
 <% end %>
