--- a/src/views/index.erb
+++ b/src/views/index.erb
@@ -43,4 +43,20 @@
       </div>
     </div>
   </div>
+
+  <div class="col-md-6">
+    <div class="panel panel-default">
+      <div class="panel-heading"><h2>資料</h2></div>
+      <div class="panel-body">
+        <ul>
+          <li><a href="https://github.com/fumi/lod2013-examples">github: lod2013-examples</a></li>
+          <li><a href="http://www.sinatrarb.com">Sinatra</a>
+          <li><a href="http://linkeddata.jp/wiki/%E3%83%84%E3%83%BC%E3%83%AB">LinkedData.jp Wiki: ツール</a></li>
+          <li><a href="http://www.slideshare.net/fumihiro/programming-with-lod">Programming with LOD</a></li>
+          <li><a href="http://www.slideshare.net/fumihiro/4-24004224">第4回AIツール入門講座 Linked Open Data入門</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
 </div>
