Replaced the link to server side wiki

--- a/src/views/index.erb
+++ b/src/views/index.erb
@@ -6,7 +6,6 @@
   <div class="container">
     <h1>サーバサイドサンプル集</h1>
     <p>第6回LODチャレンジデー サーバサイドコース用資料</p>
-    <p><a href="https://github.com/LinkedOpenData/challenge2013/wiki/%E3%82%B5%E3%83%BC%E3%83%90%E3%83%BC%E3%82%B5%E3%82%A4%E3%83%89">Wikiも参照</a></p>
   </div>
 </div>
 
@@ -49,7 +48,8 @@
       <div class="panel-heading"><h2>資料</h2></div>
       <div class="panel-body">
         <ul>
-          <li><a href="https://github.com/fumi/lod2013-examples">github: lod2013-examples</a></li>
+          <li><a href="https://github.com/LinkedOpenData/challenge2013/wiki/%E3%82%B5%E3%83%BC%E3%83%90%E3%83%BC%E3%82%B5%E3%82%A4%E3%83%89">サーバサイド シラバス</a></li>
+          <li><a href="https://github.com/fumi/lod2013-examples">lod2013-examplesソース</a></li>
           <li><a href="http://www.sinatrarb.com">Sinatra</a>
           <li><a href="http://linkeddata.jp/wiki/%E3%83%84%E3%83%BC%E3%83%AB">LinkedData.jp Wiki: ツール</a></li>
           <li><a href="http://www.slideshare.net/fumihiro/programming-with-lod">Programming with LOD</a></li>
