Changed the title

--- a/src/views/index.erb
+++ b/src/views/index.erb
@@ -4,8 +4,8 @@
 
 <div class="jumbotron">
   <div class="container">
-    <h1>サーバサイドサンプル集</h1>
-    <p>第6回LODチャレンジデー サーバサイドコース用資料</p>
+    <h1>Sinatra + SPARQL編 サンプル集</h1>
+    <p><a href="http://peatix.com/event/22468">第6回LODチャレンジデー</a> サーバサイドコース用資料</p>
   </div>
 </div>
 
