--- a/src/views/piechart.erb
+++ b/src/views/piechart.erb
@@ -9,6 +9,17 @@
 <% end %>
 
 <h1>Sgvizler 円グラフ</h1>
+
+<p>JavaScriptでSPARQLの結果をチャート等にすることができるライブラリ<a href="https://code.google.com/p/sgvizler/">Sgvizler</a>を使用して円グラフ (gPieChart)とテーブル (gTable)を出力している．</p>
+
+<pre><code>SELECT ?class (count(?instance) AS ?noOfInstances)
+WHERE { 
+  ?instance a ?class .
+}
+GROUP BY ?class
+ORDER BY DESC(?noOfInstances)
+</code></pre>
+
 <h2>gPieChart</h2>
 <div id="sgvzl_div_gPieChart"
   data-sgvizler-endpoint="http://ja.dbpedia.org/sparql"
