--- a/src/views/index.erb
+++ b/src/views/index.erb
@@ -15,7 +15,7 @@
       <div class="panel-heading"><h2>取得データ表示</h2></div>
       <div class="panel-body">
         <p>単語を入力してそのデータを取得・表示</p>
-        <p>データ・ソース例: DBpedia Japanese</p>
+        <p>データ・ソース例: <a href="http://ja.dbpedia.org">DBpedia Japanese</a></p>
         <p><a class="btn btn-defualt" href="/word" role="button">詳細を見る</a><p>
       </div>
     </div>
@@ -26,7 +26,7 @@
       <div class="panel-heading"><h2>地図表示</h2></div>
       <div class="panel-body">
         <p>場所を入力してその位置を地図で表示</p>
-        <p>データ・ソース例: DBpedia Japanese</p>
+        <p>データ・ソース例: <a href="http://ja.dbpedia.org">DBpedia Japanese</a></p>
         <p><a class="btn btn-defualt" href="/map" role="button">詳細を見る</a><p>
       </div>
     </div>
@@ -37,7 +37,7 @@
       <div class="panel-heading"><h2>円グラフ表示</h2></div>
       <div class="panel-body">
         <p>数を集計してグラフ表示</p>
-        <p>データ・ソース例: DBpedia Japanese</p>
+        <p>データ・ソース例: <a href="http://ja.dbpedia.org">DBpedia Japanese</a></p>
         <p><a class="btn btn-defualt" href="/piechart" role="button">詳細を見る</a><p>
       </div>
     </div>
@@ -50,10 +50,15 @@
         <ul>
           <li><a href="https://github.com/LinkedOpenData/challenge2013/wiki/%E3%82%B5%E3%83%BC%E3%83%90%E3%83%BC%E3%82%B5%E3%82%A4%E3%83%89">サーバサイド シラバス</a></li>
           <li><a href="https://github.com/fumi/lod2013-examples">lod2013-examplesソース</a></li>
-          <li><a href="http://www.sinatrarb.com">Sinatra</a>
-          <li><a href="http://linkeddata.jp/wiki/%E3%83%84%E3%83%BC%E3%83%AB">LinkedData.jp Wiki: ツール</a></li>
-          <li><a href="http://www.slideshare.net/fumihiro/programming-with-lod">Programming with LOD</a></li>
+          <li><a href="http://dbpedia.org/sparql">DBpedia SPARQL Endpoint</a></li>
+          <li><a href="http://ja.dbpedia.org/sparql">DBpedia Japanese SPARQL Endpoint</a></li>
+          <li><a href="http://www.openstreetmap.org/">OpenStreetMap</a></li>
+          <li><a href="http://www.sinatrarb.com">Sinatra</a></li>
+          <li><a href="http://leafletjs.com/">Leaflet</a></li>
+          <li><a href="https://code.google.com/p/sgvizler/">sgvizler</a></li>
           <li><a href="http://www.slideshare.net/fumihiro/4-24004224">第4回AIツール入門講座 Linked Open Data入門</a></li>
+          <li><a href="http://www.slideshare.net/fumihiro/programming-with-lod">Programming with LOD</a></li>
+          <li><a href="http://linkeddata.jp/wiki/%E3%83%84%E3%83%BC%E3%83%AB">LinkedData.jp Wiki: ツール</a></li>
         </ul>
       </div>
     </div>
