Added a link to OSM

--- a/src/views/map.erb
+++ b/src/views/map.erb
@@ -71,7 +71,7 @@
 
 <h1>地図表示</h1>
 
-<p>サービス非依存の地図ライブラリである<a href="http://leafletjs.com">Leaflet</a>を使用して，OpenStreetMap上にSPARQLで検索したポイントデータを表示する．
+<p>サービス非依存の地図ライブラリである<a href="http://leafletjs.com">Leaflet</a>を使用して，<a href="http://www.openstreetmap.org/">OpenStreetMap</a>上にSPARQLで検索したポイントデータを表示する．
 </p>
 
 <h2>app.rb内で使用しているSPARQLクエリ</h2>
