Added comment for CORS

--- a/src/views/piechart.erb
+++ b/src/views/piechart.erb
@@ -10,7 +10,7 @@
 
 <h1>Sgvizler 円グラフ</h1>
 
-<p>JavaScriptでSPARQLの結果をチャート等にすることができるライブラリ<a href="https://code.google.com/p/sgvizler/">Sgvizler</a>を使用して円グラフ (gPieChart)とテーブル (gTable)を出力している．</p>
+<p>JavaScriptでSPARQLの結果をチャート等にすることができるライブラリ<a href="https://code.google.com/p/sgvizler/">Sgvizler</a>を使用して円グラフ (gPieChart)とテーブル (gTable)を出力している．CORS前提．</p>
 
 <pre><code>SELECT ?class (count(?instance) AS ?noOfInstances)
 WHERE { 
